syllabus is ready, starting intro lecture.

--- a/syllabus.tex
+++ b/syllabus.tex
@@ -68,9 +68,16 @@ of reactor design and analysis.
 \subsection*{\noindent \textsc{\textcolor{blue}{Instructor}}}
 
 \noindent \href{https://www.nuc.berkeley.edu/people/rachel-slaybaugh}{Rachel Slaybaugh}\\
-slaybaugh@berkeley.edu\\
+\href{slaybaugh@berkeley.edu}{slaybaugh@berkeley.edu}\\
 4173 Etcheverry Hall\\
 Office hours by appointment
+
+\subsection*{\noindent \textsc{\textcolor{blue}{Reader}}}
+
+\noindent Kelly Rowland\\
+\href{krowland@berkeley.edu}{krowland@berkeley.edu}\\
+3115 Etcheverry Hall\\
+Office hours TBD
 
 
 \subsection*{\noindent \textsc{\textcolor{blue}{Textbook}}}
@@ -84,17 +91,27 @@ Analysis.} John Wiley \& Sons (1976), ISBN 0-471-22363-8
 
 \subsection*{\noindent \textsc{\textcolor{blue}{Additional Resources}}}
 
-\noindent \href{https://bcourses.berkeley.edu}{https://bcourses.berkeley.edu}
+\begin{itemize}
+\item Class GitHub: \href{https://github.com/rachelslaybaugh/NE250}{https://github.com/rachelslaybaugh/NE250}
 
-\noindent \href{http://www.lib.berkeley.edu/node}{http://www.lib.berkeley.edu/node}
+\item Bcourses: \href{https://bcourses.berkeley.edu}{https://bcourses.berkeley.edu}
 
-\noindent \href{http://atom.kaeri.re.kr/}{http://atom.kaeri.re.kr/}
+\item Library: \href{http://www.lib.berkeley.edu/node}{http://www.lib.berkeley.edu/node}
 
-\noindent \href{http://www.nndc.bnl.gov/}{http://www.nndc.bnl.gov/}
+\item KAERI: \href{http://atom.kaeri.re.kr/}{http://atom.kaeri.re.kr/}
+\item U.S.\ Nuclear Data\href{http://www.nndc.bnl.gov/}{http://www.nndc.bnl.gov/}
 
-\noindent \href{http://montecarlo.vtt.fi/}{http://montecarlo.vtt.fi/} (Serpent official website)
+\item Serpent official website: \href{http://montecarlo.vtt.fi/}{http://montecarlo.vtt.fi/} 
 
-\noindent \href{http://www.decf.berkeley.edu/}{http://www.decf.berkeley.edu/}
+\item DECF (1171 and 1111 Etcheverry): \href{http://www.decf.berkeley.edu/}{http://www.decf.berkeley.edu/}
+
+\item Free Python ebooks:
+\href{http://www.leettips.org/2013/02/top-10-free-python-pdf-ebooks-download.html}{http://www.leettips.org/2013/02/top-10-free-python-pdf-ebooks-download.html}
+
+\item The Hacker Within: \href{http://thehackerwithin.github.io/berkeley/}{http://thehackerwithin.github.io/berkeley/}
+
+\item Software Carpentry: \href{http://software-carpentry.org/lessons.html}{http://software-carpentry.org/lessons.html}
+\end{itemize}
 
 
 \subsection*{\noindent \textsc{\textcolor{blue}{Prerequisites}}}
