fix minus sign to equal sign in mean lifetime def.

--- a/intro/intro.tex
+++ b/intro/intro.tex
@@ -114,7 +114,7 @@ The rate of decay is\[\lambda N_0 e^{-\lambda t} \:.\]
 The probability that a given nucleus will decay in a given time interval is \[p(t) dt = \lambda e^{-\lambda t} dt \:.\]
 
 We are interested in the mean lifetime of nuclei (predicting the decay of a particular nucleus doesn't really work)
-\[\bar{t} \equiv \int_0^\infty dt \: t \: p(t) - \lambda \int_0^\infty dt \: t \: e^{-\lambda t} = \frac{1}{\lambda} \:. \]
+\[\bar{t} \equiv \int_0^\infty dt \: t \: p(t) = \lambda \int_0^\infty dt \: t \: e^{-\lambda t} = \frac{1}{\lambda} \:. \]
 We very often use the related quantity of half-life (time it takes for half of the original nuclei to decay) 
 \[t_{\frac{1}{2}} = \frac{\ln(2)}{\lambda} \:. \]
 
