fixed another typo from day 1, added another q to the survey.

--- a/intro/intro.tex
+++ b/intro/intro.tex
@@ -104,7 +104,7 @@ These are probabilistic events that depend only on the type of nucleus.
 $\lambda$ is the decay constant. If $N(t)$ is the number of nuclei at $t$ and $N_0$ is the original number of nuclei, then
 %
 \begin{align*}
-N(t + dt) - N(t) &= -\lambda N(t) = dN(t)\\
+N(t + dt) - N(t) &= -\lambda N(t) dt = dN(t)\\
 -\frac{dN}{dt} &= \lambda N(t)\\
 N(t) &= N_0 e^{-\lambda t}
 \end{align*}
