--- a/survey.tex
+++ b/survey.tex
@@ -58,6 +58,9 @@ What gender pronouns do you prefer?
 Are there any special accommodations you need for this course?
 \vspace*{3 em}
 
+What did you study as an undergraduate?
+\vspace*{3 em}
+
 Have you ever used Serpent or MCNP?
 \vspace*{3 em}
 
