--- a/sep02/Sep-02Class.tex
+++ b/sep02/Sep-02Class.tex
@@ -74,7 +74,7 @@ Fissile isotopes are those wich can fission from a neutron with low (in theory, 
 
 Fissionable isotopes can undergo fission from high-energy neutrons; their critical energies are higher than those of fissile isotopes: $^{232}$Th, $^{238}$U, $^{240}$Pu. Fissionable nuclides are unable to sustain by themselves a stable fission reaction.
 \begin{center}
-\includegraphics[scale=0.6]{nucleonbinding}
+\includegraphics[scale=0.6]{../figs/nucleonbinding}
 \end{center}
 
 Fertile isotopes are those which create fissile isotopes upon neutron capture. Two examples:
@@ -85,14 +85,14 @@ $^{232}\text{Th}+n \stackrel{\gamma}{\rightarrow} \,^{233}\text{Th}\stackrel{\be
 
 Each fission of a parent atom produces a different set of fission product atoms. However, while an individual fission is not predictable, the fission products are statistically predictable. The amount of any particular isotope produced per fission is called its yield, typically expressed as percent per parent fission.
 \begin{center}
-\includegraphics[scale=0.6]{fissionproductyield}
+\includegraphics[scale=0.6]{../figs/fissionproductyield}
 \end{center}
 
 Most fission is asymmetric, with one fission product more massive than the other. In general the higher the energy of the state that undergoes nuclear fission, the more likely that the two fission products have similar mass. Hence as the neutron energy increases and/or the energy of the fissile atom increases, the valley between the two peaks becomes more shallow.
 
 $\nu=$average number of neutrons per fission
 \begin{center}
-\includegraphics[scale=0.6]{nu}
+\includegraphics[scale=0.6]{../figs/nu}
 \end{center}
 $\nu^{49}$ is for $^{239}$Pu, $\nu^{25}$ is for $^{235}$U, $\nu^{23}$ is for $^{233}$U.
 
@@ -106,7 +106,7 @@ conversion ratio = $\frac{\text{fissile produced}}{\text{fissile consumed}}$
 In thermal reactors, the conversion ratio is typically less than one. In fast reactors, the conversion ratio can be greater than or equal to one. This is the motivation for ``breeding" reactors and requires $\eta >2$.
 
 \begin{center}
-\includegraphics[scale=0.6]{fissionspectrum}
+\includegraphics[scale=0.6]{../figs/fissionspectrum}
 \end{center}
 $\chi(E)dE=$ fission spectrum = probability that a neutron will have energy\\ $E$ in the range $[E, E+dE]$
 
@@ -171,7 +171,7 @@ N(\rvec,E,\omvec,t)dVdEd\omvec = \begin{array}{l}
 $\omvec$ be described by a polar angle $\theta$ measured with respect to the $z$-axis
  and a corresponding azimuthal angle $\varphi$ such that $(\Omega_x=\cos\varphi \sin\theta, \Omega_y = \sin\varphi \sin\theta, \Omega_z = \cos\theta)$.
 \begin{figure}%[t]\nonumber
-\includegraphics[height=10 cm,width=10 cm]{fig2_1.jpg}
+\includegraphics[height=10 cm,width=10 cm]{../figs/fig2_1.jpg}
 \end{figure}
  If we introduce $\mu = \cos\theta$, then
 \begin{align*}
