--- a/sep14/Sep-14Class.tex
+++ b/sep14/Sep-14Class.tex
@@ -199,6 +199,10 @@ Neutron source(s) summed over every direction:
 S(z,E,t) = S_0(z,E,t) = \int_{-1}^{1}d\mu S(z,E,\mu,t)
 \end{equation*}
 
+\begin{equation*}
+S_1(z,E,t) = \int_{-1}^1d\mu S(z,E,\mu,t)P_1(\mu)
+\end{equation*}
+
 Scattering cross sections:
 
 \begin{gather*}
