fix P1 approx. notation

--- a/sep14/Sep-14Class.tex
+++ b/sep14/Sep-14Class.tex
@@ -109,7 +109,7 @@ P_1(\mu) = \mu \\
 \frac{2}{2n+1}\delta_{n,m}=\frac{2}{2n+1}\text{if n = m, 0 if n $\neq$ m.}
 \end{gather*}
 
-Using $N=1$ with Legendre polynomials (the ``P1 method") gives
+Using $N=1$ with Legendre polynomials (the ``$P_1$ method") gives
 
 \begin{equation*}
 \phi(z,E,\mu,t) = \frac{1}{2}P_0(\mu)\phi_0(z,E,t) + \frac{3}{2}P_1(\mu)\phi_1(z,E,t).
