changed 16 to reflect what I taught and making progress on 21.

--- a/sep14/Sep-14Class.tex
+++ b/sep14/Sep-14Class.tex
@@ -115,7 +115,7 @@ Using $N=1$ with Legendre polynomials (the ``$P_1$ method") gives
 \phi(z,E,\mu,t) = \frac{1}{2}P_0(\mu)\phi_0(z,E,t) + \frac{3}{2}P_1(\mu)\phi_1(z,E,t).
 \end{equation*}
 
-In general,
+In general, (where did this come from???)
 
 \begin{equation*}
 \phi_{\el}(z,E,t) = \int^{1}_{-1}d\mu\phi(z,E,\mu,t)P_{\el}(\mu) 
@@ -212,5 +212,7 @@ Scattering cross sections:
 \sigsi = \int_{-1}^1d\mu_s\frac{\Sigma_s\mu_s}{\Sigma_s}\mu_s\Sigma_s = \bar{\mu_0}\Sigma_s, 
 \text{where $\bar{\mu_0} =$ average scattering angle}
 \end{gather*}
+
+<fix these last notes about the scattering term>
 
 \end{document}
